--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		
+	<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-ui</artifactId>
+		<version>1.6.9</version>
+	</dependency>
+		
+		
 	</dependencies>
 
 	<build>
